--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h2>Contacts:</h2>
           <ul>
             <li><span>Location:</span>Krym, Stary Krym</li>
-            <li><span>Tel:</span><a class="cont-link" href="tel:+79787205910">+7(978)7205910</a></li>
+            <!-- <li><span>Tel:</span><a class="cont-link" href="tel:+79787205910">+7(978)7205910</a></li> -->
             <li><span>e-mail:</span><a class="cont-link" href="mailto:torya.toria@yandex.ru">torya.toria@yandex.ru</a>
             </li>
             <li><span>GitHub:</span><a class="cont-link" href="https://github.com/ToryaToria"
