--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 target="_blank">ToryaToria</a></li>
             <li><span>Discord:</span><a class="cont-link"
                 href="https://discord.com/channels/516715744646660106/917120666782801991"
-                target="_blank">torya_toria</a></li>
+                target="_blank">Torya_toria</a></li>
           </ul>
         </section>
 
